Remove deprecated/internal api usages